<resources>
    <string name="app_name">دليل جامعة مصراتة</string>

    <string name="ads_image">Ads image</string>
    <string name="yes">نعم</string>
    <string name="no">لا</string>
    <string name="action_settings">الإعدادات</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="your_result">نتيجتك</string>

    <string name="departments">الأقسام</string>
    <string name="submit">تأكيد</string>
    <string name="login">تسجيل الدخول</string>
    <string name="profile">الصفحة الشخصية</string>
    <string name="register">تسجيل</string>
    <string name="logout">تسجيل الخروج</string>
    <string name="title_activity_x">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">البريد الجامعي</string>
    <string name="prompt_password">كلمة المرور</string>
    <string name="commit_prompt_password">تأكيد كلمة المرور</string>
    <string name="action_sign_in_short">تسجيل</string>
    <string name="error_invalid_email">البريد الإلكتروني غير صالح</string>
    <string name="error_invalid_password">كلمة المرور قصيرة جداً</string>
    <string name="error_incorrect_password">كلمة المرور غير صحيحة</string>
    <string name="error_field_required">هذا الحقل مطلوب</string>
    <string name="error_password_mismatch">كلمتي المرور غير متطابقة</string>
    <string name="error_email_exists">هذا البريد الإلكتروني موجود بالفعل</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="test_your_self">اختبر نفسك</string>
    <string name="next">التالي</string>
    <string name="previous">السابق</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>

</resources>
